# OpenGLSettings

./: .gitignore  CMakeLists.txt  main.cpp
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
